--- a/frontend/src/pages/welcome/Welcome.module.css
+++ b/frontend/src/pages/welcome/Welcome.module.css
@@ -18,6 +18,7 @@
 
 .panel{
   background-color: var(--color-white-opa);
+  backdrop-filter: blur(5px);
   border-radius: 10px;
   padding: 40px 70px;
   max-width: 660px;
