--- a/frontend/src/components/mapbox/SearchBox.module.css
+++ b/frontend/src/components/mapbox/SearchBox.module.css
@@ -4,6 +4,7 @@
   background-color: var(--color-white);
   padding: 20px;
   box-sizing: border-box;
+  position: relative;
 }
 
 .searchBoxTitle{
@@ -49,4 +50,28 @@
 .iconInputElement img{
   height: 100%;
   width: auto;
+}
+
+.listResult{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: var(--color-white);
+  border-radius: 10px;
+  padding: 10px;
+  z-index: 1000;
+}
+
+.listResult li{
+  padding: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.listResult li:hover{
+  background-color: var(--color-default);
 }
