--- a/frontend/src/components/upload/UploadImages.module.css
+++ b/frontend/src/components/upload/UploadImages.module.css
@@ -1,4 +1,4 @@
-.main{
+.main {
   background-color: var(--color-white);
   width: 100%;
   height: 280px;
@@ -9,37 +9,62 @@
   gap: 20px;
   border-radius: 8px;
   overflow: hidden;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
-.icon{
+.icon {
   width: 50px;
 }
 
-.icon img{
+.icon img {
   width: 100%;
   height: auto;
 }
 
-.content{
-  display: flex;;
+.content {
+  display: flex;
   gap: 10px;
 }
 
-.content p{
+.content p {
   color: var(--color-gray);
 }
 
-.content figure{
+.content figure {
   width: 16px;
 }
 
-.content figure img{
+.content figure img {
   width: 100%;
   height: auto;
 }
 
-.carousel_ img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+.carouselWrapper {
+  position: relative;
+}
+
+.carouselWrapper:hover .iconEdit {
+  opacity: 1;
+}
+
+.iconEdit {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 24px;
+  height: 24px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  background-color: var(--color-white);
+  border-radius: 5px;
+}
+
+.iconEdit img {
+  width: 80%;
+  height: auto;
 }
