--- a/frontend/src/styles/default-style.css
+++ b/frontend/src/styles/default-style.css
@@ -4,9 +4,11 @@
   --color-primary: #983A2E;
   --color-black: black;
   --color-default: #D9D9D9;
-  --color-white-opa: #ffffff59;
+  --color-white-opa: #ffffffab;
   --color-gray: #828080;
+  --color-gray-light: #f0f0f0;
   --color-error: #D00D0D;
+  --color-error-light: #DF6464;
   --color-pending: #FFB800;
   --color-success: #4CAF50;
 
