--- a/frontend/src/pages/login/LoginPage.module.css
+++ b/frontend/src/pages/login/LoginPage.module.css
@@ -23,6 +23,7 @@
   align-items: center;
   gap: 20px;
   margin-top: 80px;
+  position: relative;
 }
 
 .login_box h2{
@@ -143,4 +144,10 @@
   box-shadow: 0 8px 20px rgba(255, 255, 255, 0.1),
               0 4px 6px rgba(0, 0, 0, 0.1);
   filter: brightness(1.05);
+}
+
+.select{
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
