--- a/frontend/src/components/mapbox/SearchBox.module.css
+++ b/frontend/src/components/mapbox/SearchBox.module.css
@@ -57,13 +57,18 @@
   padding: 0;
   margin: 0;
   position: absolute;
-  top: 100%;
+  top: 110%;
   left: 0;
   width: 100%;
   background-color: var(--color-white);
   border-radius: 10px;
   padding: 10px;
   z-index: 1000;
+  max-height: 500px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .listResult li{
